# snopy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  basics_1.ipynb  basics_2.ipynb  basics_3_with_statement.ipynb  ingestion_external_stage_csv.ipynb  ingestion_local_stage_csv.ipynb  ingestion_local_stage_json.ipynb
examples/data/: noaa-ghcn-pds_2021.csv
src/snopy/: __init__.py  connect.py  snowflake_connector.py
src/snopy/_elements/: database.py  file_format.py  role.py  schema.py  snowflake_connector.py  stage.py  storage_integration.py  warehouse.py
tests/: conftest.py  test_snowflake_connector.py
