[tool.poetry]
name = "snopy"
version = "0.1.0"
description = "Snowflake API connector for Python"
authors = ["Mateusz Polakowski <mateusz.polakowski.ds@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
snowflake-connector-python = "^2.7.12"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
